Enhance publish workflow by expanding OS matrix to include Rocky Linux 8 and adjusting release versioning based on distribution, improving RPM build consistency across environments.

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -13,6 +13,8 @@ jobs:
     strategy:
       matrix:
         include:
+          #- os: rockylinux:8
+          #  dist: .el8
           - os: rockylinux:9
             dist: .el9
           - os: fedora:40
