Update publish workflow to include prefix in configure command for improved installation path

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -80,7 +80,7 @@ jobs:
             ./autogen.sh
 
             # Configure the build system.
-            ./configure
+            ./configure --prefix=/usr
 
             # Write version to a file.
             echo \"$VERSION\" > /root/clearly/VERSION
