Refactor storage paths and integrate new storage management in clearly. Update Makefile.am to include uninstall and clean hooks for runtime paths. Replace user-specific storage paths with a consistent default path across various files. Remove _syncthing integration and implement a new _storage module for improved functionality.

--- a/Makefile.am
+++ b/Makefile.am
@@ -24,3 +24,20 @@ install-exec-hook:
                 $$i; \
 	  fi \
 	done
+
+	@echo '### creating runtime paths ###'
+	mkdir -p /var/tmp/clearly
+	mkdir -p /var/lib/clearly
+	mkdir -p /run/clearly
+
+uninstall-hook:
+    @echo '### deleting runtime paths ###'
+   	rm -rf /var/tmp/clearly
+	rm -rf /var/lib/clearly
+	rm -rf /run/clearly
+
+clean-local:
+    @echo '### emptying runtime paths ###'
+   	rm -rf /var/tmp/clearly/*
+	rm -rf /var/lib/clearly/*
+	rm -rf /run/clearly/*
