Refactor daemon.py to integrate Syncthing for service management, replacing the Storage class with Syncthing functionality. Update ServiceListener to manage peers dynamically based on service discovery. Modify WebServer initialization to use the updated import structure. Remove deprecated storage functionality and enhance logging for service interactions.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -12,7 +12,7 @@ mylibdir = $(pkglibdir)
 
 cython_modules = \
   _build _build_cache _clearly _executor _filesystem _force _grammar _http _image \
-  _irtree _misc _proxy _pull _push _reference _registry _storage _tree _zeroconf 
+  _irtree _misc _proxy _pull _push _reference _registry _syncthing _tree _zeroconf 
 
 cython_c_files = $(cython_modules:%=%.c)
 cython_so_files = $(cython_modules:%=%@PYEXT_SUFFIX@)
