Refactor command scripts and improve functionality
- Removed obsolete commands 'logs.c' and 'stop.c', replacing them with shell scripts 'logs' and 'stop' for better maintainability.
- Updated the 'deploy' command to enhance usage clarity and error handling.
- Improved the 'list' command to provide better help documentation and argument parsing.
- Adjusted the .gitignore to exclude unnecessary files.
- Updated Makefile.am to reflect changes in command scripts and ensure proper distribution.

--- a/cmd/Makefile.am
+++ b/cmd/Makefile.am
@@ -5,8 +5,8 @@
 ## C programs
 
 cmddir = $(pkglibexecdir)
-cmd_PROGRAMS = check run use logs stop
-EXTRA_DIST = convert fromhost test list version
+cmd_PROGRAMS = check run use
+EXTRA_DIST = convert fromhost test list stop logs version
 
 run_SOURCES = run.c core.h core.c net.h net.c misc.h misc.c
 if HAVE_LIBSQUASHFUSE
@@ -23,7 +23,7 @@ use_LDADD = @LIBMNL_LIBS@ @LIBNFTNL_LIBS@ @LIBNL_LIBS@
 
 ## Shell scripts - distributed as-is
 
-cmd_SCRIPTS = convert fromhost test list version
+cmd_SCRIPTS = convert fromhost test list stop logs version
 
 # Python modules to compile via Cython
 cython_modules = image daemon
