Enhance container management functionality
- Added new commands for container management: 'list', 'stop', and 'logs' to improve usability and maintainability.
- Introduced an Executor class to handle container operations, including starting, stopping, and retrieving logs.
- Updated the Runtime class to utilize the new Executor for container management, enhancing the orchestration capabilities.
- Adjusted Makefile.am to include the new command scripts and ensure proper distribution.

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,6 +12,9 @@ install-exec-hook:
 	for i in $(DESTDIR)@libexecdir@/clearly/convert \
 	         $(DESTDIR)@libexecdir@/clearly/fromhost \
 	         $(DESTDIR)@libexecdir@/clearly/test \
+			 $(DESTDIR)@libexecdir@/clearly/list \
+			 $(DESTDIR)@libexecdir@/clearly/stop \
+			 $(DESTDIR)@libexecdir@/clearly/logs \
 			 $(DESTDIR)@datadir@/clearly/common.bash \
 	         $(DESTDIR)@datadir@/clearly/doctest \
 			 $(DESTDIR)@libdir@/clearly/_base.sh; \
