Enhance clearly command functionality and network management
- Added checks to ensure the existence of the network bridge "clearly0" and the VXLAN link "vxclearly0", creating them if necessary.
- Updated the `create_vxlan` function to include parameters for lower device name, group IP, local IP, and destination port.
- Introduced a new function `set_vxlan_up` to bring up the VXLAN interface.
- Removed the obsolete `use.c` command script and updated related Makefile entries to streamline the command set.
- Improved the `get_default_ipv4` function to retrieve the default route's IPv4 address and interface name.
- Adjusted Makefile.am to include necessary libraries and headers for the new functionality.

--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -7,4 +7,5 @@
 bin_PROGRAMS = clearly
 
 clearly_SOURCES = clearly.c
-clearly_CFLAGS = -DCMDDIR="\"$(pkglibexecdir)\""
+clearly_CFLAGS = @LIBNL_CFLAGS@ -DCMDDIR="\"$(pkglibexecdir)\"" -I$(top_srcdir)/cmd
+clearly_LDADD = @LIBMNL_LIBS@ @LIBNFTNL_LIBS@ @LIBNL_LIBS@
