Enhance clearly command and network management functionality
- Introduced a default bridge IP address in clearly.c for network bridge creation.
- Added detailed logging for the creation and setup of the VXLAN link.
- Updated Makefile.am to include additional source files for improved functionality.
- Refactored core.c to streamline containerization steps and improve code clarity.
- Enhanced get_default_ipv4 function to better handle route retrieval and interface resolution.

--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -6,6 +6,6 @@
 
 bin_PROGRAMS = clearly
 
-clearly_SOURCES = clearly.c
+clearly_SOURCES = clearly.c ../cmd/net.c ../cmd/misc.c
 clearly_CFLAGS = @LIBNL_CFLAGS@ -DCMDDIR="\"$(pkglibexecdir)\"" -I$(top_srcdir)/cmd
 clearly_LDADD = @LIBMNL_LIBS@ @LIBNFTNL_LIBS@ @LIBNL_LIBS@
