Enhance deployment functionality and improve error handling
- Added a new 'deploy' command to the Makefile for better application management.
- Updated the deploy function in daemon.py to accept a 'name' parameter, improving clarity and functionality.
- Enhanced error logging in the deploy and list_containers functions for better debugging.
- Refactored the start_container method in the Executor class to support Union types for publish and environment parameters.
- Introduced YAML support in the WebServer class for handling payloads, improving flexibility in API interactions.
- Added a sample docker-compose.yml file for testing deployment scenarios.

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,6 +11,7 @@ install-exec-hook:
 	@echo '### re-writing embedded paths ###'
 	for i in $(DESTDIR)@libexecdir@/clearly/convert \
 	         $(DESTDIR)@libexecdir@/clearly/fromhost \
+			 $(DESTDIR)@libexecdir@/clearly/deploy \
 	         $(DESTDIR)@libexecdir@/clearly/test \
 			 $(DESTDIR)@libexecdir@/clearly/list \
 			 $(DESTDIR)@libexecdir@/clearly/stop \
