--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -1,28 +1,26 @@
-services:
-  ollama:
-    image: ollama/ollama:latest
-    ports:
-      - 11434:11434
-    volumes:
-      - ollama:/root/.ollama
-    tty: true
-    restart: unless-stopped
+version: '2'
 
-  app:
-    image: ghcr.io/open-webui/open-webui:main
-    volumes:
-      - app:/app/backend/data
-    depends_on:
-      - ollama
-    ports:
-      - 3000:8080
-    environment:
-      - 'OLLAMA_BASE_URL=http://ollama:11434'
-      - 'WEBUI_SECRET_KEY='
-    extra_hosts:
-      - host.docker.internal:host-gateway
-    restart: unless-stopped
+services:
+   db:
+     image: mysql:5.7
+     restart: always
+     volumes:
+       - db_data:/var/lib/mysql
+     environment:
+       MYSQL_ROOT_PASSWORD: wordpress
+       MYSQL_DATABASE: wordpress
+       MYSQL_USER: wordpress
+       MYSQL_PASSWORD: wordpress
+
+   wordpress:
+     image: wordpress:latest
+     restart: always
+     ports:
+       - 80
+     environment:
+       WORDPRESS_DB_HOST: db:3306
+       WORDPRESS_DB_USER: wordpress
+       WORDPRESS_DB_PASSWORD: wordpress
 
 volumes:
-  ollama:
-  app:
+    db_data:
