--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,8 @@ a.out
 /examples/copy/symlink-to-fileB-B
 /doc/doctrees/
 /doc/html/
-/doc/man/*.[17]
+/doc/man/*
+!/doc/man/README
 /doc/_static/
 /test/build/30_doctest-auto.bats
 /test/force-auto.bats
