Update documentation theme assets and configuration
- Replaced logo and favicon images with SVG versions for better scalability and quality.
- Updated Sphinx configuration to reflect new asset paths and removed deprecated logo handling.
- Enhanced header and sidebar templates to utilize the new logo structure, improving visual consistency across the documentation.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -37,7 +37,7 @@ favicon.ico \
 index.rst \
 install.rst \
 install.sh \
-logo-sidebar.png \
+logo.svg \
 man/README \
 py_env.rst \
 rd100-winner.png \
