Update Sphinx theme configuration and styles
- Replaced the 'clearly' theme with 'sphinx_core' in the Sphinx configuration for improved consistency.
- Updated the documentation index to include the 'faq' section.
- Refactored the Makefile to streamline the man-build process.
- Introduced new CSS styles and SCSS variables for better theming and layout control.
- Enhanced the theme's static file handling and ensured proper compilation of SCSS to CSS.
- Adjusted various style components to utilize new variable definitions for colors and borders.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -140,7 +140,7 @@ if ENABLE_HTML
 	      $(BUILDDIR)/html/see_also.html
 endif
 
-man-build: theme-build ../README.rst $(EXTRA_DIST)
+man-build: $(EXTRA_DIST)
 if ENABLE_MAN
 	$(SPHINXBUILD) -b man $(ALLSPHINXOPTS) $(BUILDDIR)/man
 endif
