--- a/doc/_ext/sphinx_core/theme.conf
+++ b/doc/_ext/sphinx_core/theme.conf
@@ -1,6 +1,6 @@
 [theme]
 inherit = basic
-stylesheet = styles/main.css
+stylesheet = main.css
 pygments_style = bw
 sidebars =
   templates/partials/sidebar_main_nav_links.html,
