Fix general theme

--- a/doc/_ext/sphinx_core/theme.conf
+++ b/doc/_ext/sphinx_core/theme.conf
@@ -3,8 +3,8 @@ inherit = basic
 stylesheet = main.css
 pygments_style = bw
 sidebars =
-  templates/partials/sidebar_main_nav_links.html,
-  templates/partials/sidebar_toc.html
+  sidebar_main_nav_links.html,
+  sidebar_toc.html
 
 [options]
 show_breadcrumbs = True
