--- a/doc/_ext/sphinx_core/theme.conf
+++ b/doc/_ext/sphinx_core/theme.conf
@@ -2,9 +2,6 @@
 inherit = basic
 stylesheet = main.css
 pygments_style = bw
-sidebars =
-  sidebar_main_nav_links.html,
-  sidebar_toc.html
 
 [options]
 show_breadcrumbs = True
@@ -12,9 +9,6 @@ show_prev_next = False
 show_scrolltop = False
 globaltoc_includehidden = True
 breadcrumbs_separator = /
-awesome_headerlinks = True
 awesome_external_links = False
 main_nav_links = False
-extra_header_link_icons = False
-logo_dark =
-logo_light =
+extra_nav_links = False
