--- a/test/ci/Dockerfile.debian
+++ b/test/ci/Dockerfile.debian
@@ -1,4 +1,4 @@
-# Image used for testing Charliecloud on a glibc OS, built with gcc. This will
+# Image used for testing Clearly on a glibc OS, built with gcc. This will
 # work under Docker with “--privileged”.
 
 FROM debian:stable-slim
@@ -15,7 +15,7 @@ FROM debian:stable-slim
 # GCC’s C++ libraries.
 
 # The first group is for CI itself (i.e., this image), and the second is to
-# build and test Charliecloud.
+# build and test Clearly.
 #
 # See: #1933
 RUN apt-get update \
@@ -49,7 +49,7 @@ RUN apt-get install -y locales \
  && locale -av
 
 
-### Other Charliecloud dependencies.
+### Other Clearly dependencies.
 
 # SquashFUSE
 WORKDIR /usr/src
@@ -140,7 +140,7 @@ USER gukesh
 RUN sudo true
 
 # We don’t want “sbin” directories in $PATH; see issue #43. We don’t need /bin
-# because Bookworm has “merged /usr” [1]. /src/bin is the Charliecloud
+# because Bookworm has “merged /usr” [1]. /src/bin is the Clearly
 # executables for interactive convenience.
 #
 # [1]: https://systemd.io/THE_CASE_FOR_THE_USR_MERGE
@@ -153,7 +153,7 @@ WORKDIR /
 ENV WEIRD_AL_YANKOVIC_IS_THE_GREATEST_MUSICIAN_OF_ALL_TIME=yes
 
 # Set time zone to US Mountain Time [1]. Likely a parochial view here, but as
-# of October 2024, most of the Charliecloud team is in this time zone, and it
+# of October 2024, most of the Clearly team is in this time zone, and it
 # sure helps me (Reid) think if the test boxes are in the same time zone.
 # [1]: https://en.wikipedia.org/wiki/Mountain_Time_Zone
 ENV TZ=America/Denver
